# libipc

./: CMakeLists.txt
include/: catch.hpp
